--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>KICKBAK</name>
+	<name>KICKBAK_v2</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -31,7 +31,7 @@
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/BuildScript for Javascript and HTML.launch</value>
+					<value>&lt;project&gt;/.externalToolBuilders/BuildScript for KICKBAK Javascript and HTML.launch</value>
 				</dictionary>
 			</arguments>
 		</buildCommand>
