--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,8 @@
 	<classpathentry kind="lib" path="libs/facebook-android-sdk.jar"/>
 	<classpathentry kind="lib" path="libs/Pushwoosh.jar"/>
 	<classpathentry kind="lib" path="libs/cordova-2.2.0.jar"/>
+	<classpathentry kind="lib" path="libs/gdx-audio.jar"/>
+	<classpathentry kind="lib" path="libs/gdx-backend-android.jar"/>
+	<classpathentry kind="lib" path="libs/gdx.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
