--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionName="2.0.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="10"
+        android:targetSdkVersion="16" />
 
    <compatible-screens>
         <!-- all small size screens -->
@@ -66,7 +66,11 @@
    <uses-permission
          android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
-	<uses-permission android:name="android.permission.NFC" />
+   <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+   <uses-feature android:name="android.hardware.microphone" android:required="true"></uses-feature>
+   <uses-feature android:name="android.hardware.touchscreen" android:required="true"></uses-feature>
+   <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
+   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	
     <application
         android:icon="@drawable/ic_launcher"
@@ -90,11 +94,6 @@
         		<action android:name="android.intent.action.SEND" />
         		<category android:name="android.intent.category.DEFAULT" />
         		<data android:mimeType="image/*" />
-      		</intent-filter>
-      		<intent-filter>
-      			<action android:name="android.nfc.action.NDEF_DISCOVERED" />
-      			<data android:mimeType="application/kickbak" />
-      			<category android:name="android.intent.category.DEFAULT" />
       		</intent-filter>
         </activity>
         <!-- ZXing activities -->
@@ -142,5 +141,5 @@
          handle received messages.
        -->
        <service android:name="com.arellomobile.android.push.PushGCMIntentService"/>
-    </application>
+       </application>
 </manifest>
